# GarminToGPT

./: .env.example  .gitignore  Dockerfile  README.md  agent.md  docker-compose.yml  package.json  prompt_principal_garmin_to_gpt_adapte.md  pyproject.toml  pyrightconfig.json  specification_garmin_to_gpt.md  start.bat
.github/workflows/: ci.yml  docker-build.yml  docker-publish-ghcr.yml  release.yml
backend/app/: __init__.py  main.py
backend/app/api/: routes_access.py  routes_auth.py  routes_logs.py  routes_mcp.py  routes_status.py  routes_tests.py  routes_tunnel.py
backend/app/core/: config.py  paths.py
backend/app/models/: auth.py  common.py  logs.py  mcp.py  status.py  tests.py  tunnel.py
backend/app/services/: container.py  garmin_auth_service.py  healthcheck_service.py  log_service.py  mcp_probe_service.py  mcp_service.py  process_manager.py  state_store.py  test_service.py  tunnel_service.py
backend/app/utils/: command.py  ports.py  time.py  (+1 more)
config/: app.example.yaml  app.yaml
docs/: agent.md  architecture.md  cloudflare.md  mcp-chatgpt.md  security.md  troubleshooting.md
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: AppHeader.tsx  ConfirmDialog.tsx  LoadingButton.tsx  LogsModal.tsx  ServiceStatusCard.tsx  StatusBadge.test.tsx  StatusBadge.tsx  TestCard.tsx  TunnelCard.test.tsx  TunnelCard.tsx
frontend/lib/: api.ts  format.ts  status.ts  types.ts
frontend/styles/: globals.css
scripts/: dev.ps1  start.ps1  status.ps1  stop.ps1  test-cloudflare-fresh-url.ps1  test-mcp-probe.ps1  test.ps1
(+8 files in other folders)
